T4-41 fix overflow in loginPage

--- a/src/pages/LoginPage/loginPage.module.scss
+++ b/src/pages/LoginPage/loginPage.module.scss
@@ -1,6 +1,7 @@
 .loginBlock {
   //max-width: 1440px;
   width: 100%;
+  height: 100vh;
   display: flex;
   margin: 0 auto;
   overflow: hidden;
@@ -16,7 +17,7 @@
 .content_title {
   font-size: 32px;
   font-family: 'Yaro', sans-serif;
-  margin: 32px 0 0 32px;
+  margin: 32px 0 -60px 32px;
 }
 .black {
   color: #2A3440;
@@ -108,5 +109,4 @@
     object-fit: cover;
   }
 }
-
 
